Event Admission Update
Added GA admission links

--- a/events/round-1.html
+++ b/events/round-1.html
@@ -37,20 +37,52 @@
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
-          <div class="media-grid">
-            <a class="thumb" href="#">Video</a>
-            <a class="thumb" href="#">Photo</a>
-            <a class="thumb" href="#">Photo</a>
-            <a class="thumb" href="#">Photo</a>
-          </div>
+          <p><strong>RACERS — IT’S TIME TO PREPARE FOR WAR.</strong></p>
+          <p>Get your hot rods ready. Turn the wrenches. Fill the bottles.</p>
+          <p>March 6th &amp; 7th, the calm is broken at Xtreme Raceway – Ferris, TX as Nitro Dave’s Clash of the Titans unleashes “Rise of the Titans.”</p>
+          <p>Experience a professional racing series built by an organization dedicated to bringing quality competition and family-friendly fun back to the South Central United States.</p>
+
+          <p><strong>Thursday: 3/5/26</strong><br>Private Testing: $325 Per Car - 17 Car Minimum<br>Time: 6pm to 11:pm</p>
+          <p><strong>Friday: 3/6/26</strong><br>Tech &amp; Qualifying (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 3/7/26</strong><br>Eliminations (All Classes)<br>Time: TBD</p>
+
+          <p><strong>Classes:</strong></p>
+          <ul>
+            <li>Lil' Titans - Jr Dragster 11.90 - 8.90</li>
+            <li>Rising Titans - Jr Dragster 7.90</li>
+            <li>Titans - 5.30' ish</li>
+            <li>Titans - 4.90' ish</li>
+            <li>Titans - 4.50' ish</li>
+            <li>Titans - 4.20' ish</li>
+            <li>Titans - 10.5</li>
+            <li>Titans - Outlaw 10.5</li>
+            <li>Titans - N/T 275 Drag Radial</li>
+            <li>Titans - N/T Outlaw 275 Drag Radial</li>
+            <li>Titans Rage - N/T 275 "Nitrous Brawl"</li>
+          </ul>
+
+          <p><strong>Activities:</strong></p>
+          <ul>
+            <li>Huffy's Bottle Throwing Contest</li>
+            <li>Elimination Tree Contest</li>
+          </ul>
         </div>
 
         <div class="card">
-          <h3>Results</h3>
-          <p class="muted">Results and media will be added after the event.</p>
-          <div class="row">
-            <a class="btn" href="../index.html#points">Points Standings</a>
-            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Xtreme%20Raceway%20Ferris%20TX" target="_blank" rel="noopener">Map</a>
+          <h3>Map</h3>
+          <p class="muted">1800 S Interstate 45 Service Rd, Ferris, TX 75125</p>
+          <iframe
+            title="Google Map: 1800 S Interstate 45 Service Rd, Ferris, TX 75125"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3991.8456971671617!2d-96.6679103127202!3d32.492900830868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864ec6d4c5dc06e3%3A0x8b41b8ce39b39a39!2s1800%20S%20Interstate%2045%20Service%20Rd%2C%20Ferris%2C%20TX%2075125!5e1!3m2!1sen!2sus!4v1768189256578!5m2!1sen!2sus"
+            width="100%"
+            height="340"
+            style="border:0;border-radius:12px"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
+          ></iframe>
+          <div class="row" style="margin-top:12px">
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=1800%20S%20Interstate%2045%20Service%20Rd%2C%20Ferris%2C%20TX%2075125" target="_blank" rel="noopener">Open in Google Maps</a>
           </div>
         </div>
       </div>
