--- a/events/round-2.html
+++ b/events/round-2.html
@@ -71,7 +71,7 @@
     <div class="container">
       <p class="muted">© <span id="year"></span> Clash of the Titans • A Nitrous Outlet Series</p>
     </div>
-    <script src="../script.js"></script>
+    <script src="../script.js?v=20260112a"></script>
   </footer>
 </body>
 </html>
