Added Rebate Capability
Price increase, info, and form submission

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=20260111" />
+  <link rel="stylesheet" href="styles.css?v=20260112a" />
 </head>
 <body>
   <header>
@@ -454,10 +454,23 @@
       <h2>Registration & Checkout</h2>
       <p class="lead">Choose your class to complete checkout.</p>
 
+      <div class="card" style="margin-bottom:16px">
+        <div class="row between" style="align-items:center; gap:12px">
+          <h3 style="margin:0">$25 Racer Rebate Program</h3>
+          <span class="tag danger">New</span>
+        </div>
+        <p>Purchase <strong>$25 or more</strong> from any Supporting Clash Sponsor and receive a <strong>$25 Clash Credit</strong> with valid proof of purchase.</p>
+        <div class="row">
+          <a class="btn primary" href="rebate.html">Learn More</a>
+          <a class="btn" href="#contact">Questions? Contact Us</a>
+        </div>
+        <p class="muted">Purchases must be made within 30 days before or 30 days after the event.</p>
+      </div>
+
       <div class="grid cols-3">
         <div class="card">
           <h3>Lil' Titans Entry</h3>
-          <p><span class="price">$100</span> per event</p>
+          <p><span class="price">$125</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/lil-titans-registration">Buy Entry</a>
             <a class="btn" href="classes/lil-titans.html">Rules</a>
@@ -467,7 +480,7 @@
 
         <div class="card">
           <h3>Rising Titans Entry</h3>
-          <p><span class="price">$100</span> per event</p>
+          <p><span class="price">$125</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/rising-titans-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629264953484">Buy Points Membership</a>
@@ -478,7 +491,7 @@
 
         <div class="card">
           <h3>4.20'ish Entry</h3>
-          <p><span class="price">$350</span> per event</p>
+          <p><span class="price">$375</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-20ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629264986252">Buy Points Membership</a>
@@ -489,7 +502,7 @@
 
         <div class="card">
           <h3>4.50'ish Entry</h3>
-          <p><span class="price">$325</span> per event</p>
+          <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-50ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265019020">Buy Points Membership</a>
@@ -500,7 +513,7 @@
 
         <div class="card">
           <h3>4.90'ish Entry</h3>
-          <p><span class="price">$325</span> per event</p>
+          <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-90ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265051788">Buy Points Membership</a>
@@ -511,7 +524,7 @@
 
         <div class="card">
           <h3>5.30'ish Entry</h3>
-          <p><span class="price">$300</span> per event</p>
+          <p><span class="price">$325</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/5-30ish-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265084556">Buy Points Membership</a>
@@ -522,7 +535,7 @@
 
         <div class="card">
           <h3>10.5 Entry</h3>
-          <p><span class="price">$350</span> per event</p>
+          <p><span class="price">$375</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/10-5-class-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265117324">Buy Points Membership</a>
@@ -533,7 +546,7 @@
 
         <div class="card">
           <h3>N/T 275 Drag Radial Entry</h3>
-          <p><span class="price">$350</span> per event</p>
+          <p><span class="price">$375</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/275-drag-radial-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265150092">Buy Points Membership</a>
@@ -544,7 +557,7 @@
 
         <div class="card">
           <h3>Outlaw 10.5 Entry</h3>
-          <p><span class="price">$400</span> per event</p>
+          <p><span class="price">$425</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-10-5-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265182860">Buy Points Membership</a>
@@ -555,7 +568,7 @@
 
         <div class="card">
           <h3>N/T Outlaw 275 Drag Radial Entry</h3>
-          <p><span class="price">$400</span> per event</p>
+          <p><span class="price">$425</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-n-t-275-drag-radial-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265215628">Buy Points Membership</a>
@@ -566,7 +579,7 @@
 
         <div class="card">
           <h3>Titans Rage - N/T 275 Nitrous Brawl Entry</h3>
-          <p><span class="price">$400</span> per event</p>
+          <p><span class="price">$425</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/titans-rage-n-t-275-nitrous-brawl-registration">Buy Entry</a>
             <a class="btn secondary" href="https://nitrousoutlet.com/products/rising-titans-points-membership?variant=45629265248396">Buy Points Membership</a>
