Racer/Vendor Info Added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=20260112a" />
+  <link rel="stylesheet" href="styles.css?v=20260114a" />
 </head>
 <body>
   <header>
@@ -469,7 +469,7 @@
 
       <div class="grid cols-3">
         <div class="card">
-          <h3>Lil' Titans Entry</h3>
+          <h3>Lil' Titans Tech Card</h3>
           <p><span class="price">$125</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/lil-titans-registration">Buy Entry</a>
@@ -479,7 +479,7 @@
         </div>
 
         <div class="card">
-          <h3>Rising Titans Entry</h3>
+          <h3>Rising Titans Tech Card</h3>
           <p><span class="price">$125</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/rising-titans-registration">Buy Entry</a>
@@ -490,7 +490,7 @@
         </div>
 
         <div class="card">
-          <h3>4.20'ish Entry</h3>
+          <h3>4.20'ish Tech Card</h3>
           <p><span class="price">$375</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-20ish-class-registration">Buy Entry</a>
@@ -501,7 +501,7 @@
         </div>
 
         <div class="card">
-          <h3>4.50'ish Entry</h3>
+          <h3>4.50'ish Tech Card</h3>
           <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-50ish-class-registration">Buy Entry</a>
@@ -512,7 +512,7 @@
         </div>
 
         <div class="card">
-          <h3>4.90'ish Entry</h3>
+          <h3>4.90'ish Tech Card</h3>
           <p><span class="price">$350</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/4-90ish-class-registration">Buy Entry</a>
@@ -523,7 +523,7 @@
         </div>
 
         <div class="card">
-          <h3>5.30'ish Entry</h3>
+          <h3>5.30'ish Tech Card</h3>
           <p><span class="price">$325</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/5-30ish-class-registration">Buy Entry</a>
@@ -534,7 +534,7 @@
         </div>
 
         <div class="card">
-          <h3>10.5 Entry</h3>
+          <h3>10.5 Tech Card</h3>
           <p><span class="price">$375</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/10-5-class-registration">Buy Entry</a>
@@ -545,7 +545,7 @@
         </div>
 
         <div class="card">
-          <h3>N/T 275 Drag Radial Entry</h3>
+          <h3>N/T 275 Drag Radial Tech Card</h3>
           <p><span class="price">$375</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/275-drag-radial-registration">Buy Entry</a>
@@ -556,7 +556,7 @@
         </div>
 
         <div class="card">
-          <h3>Outlaw 10.5 Entry</h3>
+          <h3>Outlaw 10.5 Tech Card</h3>
           <p><span class="price">$425</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-10-5-registration">Buy Entry</a>
@@ -567,7 +567,7 @@
         </div>
 
         <div class="card">
-          <h3>N/T Outlaw 275 Drag Radial Entry</h3>
+          <h3>N/T Outlaw 275 Drag Radial Tech Card</h3>
           <p><span class="price">$425</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/outlaw-n-t-275-drag-radial-registration">Buy Entry</a>
@@ -578,7 +578,7 @@
         </div>
 
         <div class="card">
-          <h3>Titans Rage - N/T 275 Nitrous Brawl Entry</h3>
+          <h3>Titans Rage - N/T 275 Nitrous Brawl Tech Card</h3>
           <p><span class="price">$425</span> per event</p>
           <div class="row">
             <a class="btn primary" href="https://nitrousoutlet.com/products/titans-rage-n-t-275-nitrous-brawl-registration">Buy Entry</a>
@@ -587,16 +587,6 @@
           </div>
           <p class="muted">See full class info for eligibility and rules.</p>
         </div>
-      </div>
-
-      <div class="space"></div>
-      <div class="card">
-        <h3>Waiver & Policies</h3>
-        <ul>
-          <li>General Liability Waiver acknowledgment at checkout</li>
-          <li>Refund/rollover policy</li>
-          <li>Tech inspection requirements</li>
-        </ul>
       </div>
     </div>
   </section>
@@ -1014,14 +1004,14 @@
         <p class="muted" id="ticket-modal-subtitle">Select a ticket type.</p>
         <div class="ticket-modal-actions">
           <a class="btn primary" id="ticket-modal-ga" href="#">General Admission</a>
-          <a class="btn secondary" id="ticket-modal-rv" href="#">Racer/Vendor Passes</a>
+          <a class="btn secondary" id="ticket-modal-rv" href="racer-vendor.html#passes">Racer/Vendor Passes</a>
         </div>
       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <script src="script.js?v=20260112a"></script>
+    <script src="script.js?v=20260114a"></script>
   </footer>
 </body>
 </html>
