--- a/events/round-3.html
+++ b/events/round-3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Round 3 • Boddie Grudge Bowl • US60 Dragway • Hardingsburg, KY • Clash of the Titans</title>
+  <title>Round 3 • Boddie’s Grudge Bowl • US 60 Dragway • Hardinsburg, KY • Clash of the Titans</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -31,28 +31,43 @@
 
   <section>
     <div class="container">
-      <h2>Round 3 • Boddie Grudge Bowl</h2>
-      <p class="lead">US60 Dragway • Hardingsburg, KY • Jun 4–6</p>
+      <h2>Round 3 • Boddie’s Grudge Bowl</h2>
+      <p class="lead">US 60 Dragway • Hardinsburg, KY • Jun 4–6</p>
 
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
-          <p class="muted">Links will be posted after the event.</p>
-          <div class="media-grid">
-            <a class="thumb" href="#" aria-label="Watch highlight video">Video</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-          </div>
+          <p>The Clash brings the legendary 4.50&rsquo;ish back to Boddie&rsquo;s Grudge Bowl at US 60 Dragway for the second year in a row.</p>
+          <p>We dominated in 2025.</p>
+          <p>In 2026, we return with reinforcements &mdash; 4.20&rsquo;ish joins the war.</p>
+          <p><strong>Two classes. One battlefield.</strong><br>Can you handle the pressure?</p>
+
+          <p><strong>Thursday: 6/4/26</strong><br>Private Testing: $325 Per Car - 17 Car Minimum<br>Time: 6pm to 11:pm</p>
+          <p><strong>Friday: 6/5/26</strong><br>Tech &amp; Qualifying (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 6/6/26</strong><br>Eliminations (All Classes)<br>Time: TBD</p>
+
+          <p><strong>Classes:</strong></p>
+          <ul>
+            <li>Titans - 4.50' ish</li>
+            <li>Titans - 4.20' ish</li>
+          </ul>
         </div>
 
         <div class="card">
-          <h3>Results</h3>
-          <p class="muted">Results and media will be added after the event.</p>
-          <div class="row">
-            <a class="btn" href="../index.html#points">Points Standings</a>
-            <a class="btn" href="../index.html#media">Back to Past Races</a>
-            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=US60%20Dragway%20Hardingsburg%20KY" target="_blank" rel="noopener">Map</a>
+          <h3>Map</h3>
+          <p class="muted">US 60 Dragway<br>1118 Old US-60, Hardinsburg, KY 40143-2520, United States</p>
+          <iframe
+            title="Google Map: US 60 Dragway, 1118 Old US-60, Hardinsburg, KY 40143-2520"
+            src="https://www.google.com/maps?q=US%2060%20Dragway%2C%201118%20Old%20US-60%2C%20Hardinsburg%2C%20KY%2040143-2520%2C%20United%20States&output=embed"
+            width="100%"
+            height="340"
+            style="border:0;border-radius:12px"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
+          ></iframe>
+          <div class="row" style="margin-top:12px">
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=US%2060%20Dragway%2C%201118%20Old%20US-60%2C%20Hardinsburg%2C%20KY%2040143-2520%2C%20United%20States" target="_blank" rel="noopener">Open in Google Maps</a>
           </div>
         </div>
       </div>
@@ -60,11 +75,11 @@
       <div class="card" style="margin-top:16px">
         <h3>Venue Info</h3>
         <ul>
-          <li>Venue: US60 Dragway</li>
-          <li>Location: Hardingsburg, KY</li>
+          <li>Venue: US 60 Dragway</li>
+          <li>Location: Hardinsburg, KY</li>
           <li>Dates: Jun 4–6</li>
         </ul>
-        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=US60%20Dragway%20Hardingsburg%20KY" target="_blank" rel="noopener">Google Maps</a></div>
+        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=US%2060%20Dragway%20Hardinsburg%20KY" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
     </div>
   </section>
