--- a/events/round-6.html
+++ b/events/round-6.html
@@ -37,22 +37,54 @@
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
-          <p class="muted">Links will be posted after the event.</p>
-          <div class="media-grid">
-            <a class="thumb" href="#" aria-label="Watch highlight video">Video</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-          </div>
+          <p><strong>RACERS &mdash; THERE IS NO PEACE WITHOUT WAR.</strong></p>
+          <p>November 13th &amp; 14th, Evadale Raceway becomes sacred ground as Nitro Dave&rsquo;s Clash of the Titans presents &ldquo;War Of The Titans.&rdquo;</p>
+          <p>No excuses. No mercy. No second chances.</p>
+          <p><strong>Only horsepower, heart, and whoever survives.</strong></p>
+
+          <p>Experience a professional racing series built by an organization dedicated to bringing quality competition and family-friendly fun back to the South Central United States.</p>
+
+          <p><strong>Thursday: 11/12/26</strong><br>Private Testing: $325 Per Car - 17 Car Minimum<br>Time: 6pm to 11:pm</p>
+          <p><strong>Friday: 11/13/26</strong><br>Tech &amp; Qualifying (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 11/14/26</strong><br>Eliminations (All Classes)<br>Time: TBD</p>
+
+          <p><strong>Classes:</strong></p>
+          <ul>
+            <li>Lil' Titans - Jr Dragster 11.90 - 8.90</li>
+            <li>Rising Titans - Jr Dragster 7.90</li>
+            <li>Titans - 5.30' ish</li>
+            <li>Titans - 4.90' ish</li>
+            <li>Titans - 4.50' ish</li>
+            <li>Titans - 4.20' ish</li>
+            <li>Titans - 10.5</li>
+            <li>Titans - Outlaw 10.5</li>
+            <li>Titans - N/T 275 Drag Radial</li>
+            <li>Titans - N/T Outlaw 275 Drag Radial</li>
+            <li>Titans Rage - N/T 275 "Nitrous Brawl"</li>
+          </ul>
+
+          <p><strong>Activities:</strong></p>
+          <ul>
+            <li>Huffy's Bottle Throwing Contest</li>
+            <li>Elimination Tree Contest</li>
+          </ul>
         </div>
 
         <div class="card">
-          <h3>Results</h3>
-          <p class="muted">Results and media will be added after the event.</p>
-          <div class="row">
-            <a class="btn" href="../index.html#points">Points Standings</a>
-            <a class="btn" href="../index.html#media">Back to Past Races</a>
-            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Evadale%20Raceway%20Evadale%20TX" target="_blank" rel="noopener">Map</a>
+          <h3>Map</h3>
+          <p class="muted">Evadale Raceway<br>2364 FM 105, Silsbee, TX 77656</p>
+          <iframe
+            title="Google Map: Evadale Raceway, 2364 FM 105, Silsbee, TX 77656"
+            src="https://www.google.com/maps?q=Evadale%20Raceway%2C%202364%20FM%20105%2C%20Silsbee%2C%20TX%2077656&output=embed"
+            width="100%"
+            height="340"
+            style="border:0;border-radius:12px"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
+          ></iframe>
+          <div class="row" style="margin-top:12px">
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Evadale%20Raceway%2C%202364%20FM%20105%2C%20Silsbee%2C%20TX%2077656" target="_blank" rel="noopener">Open in Google Maps</a>
           </div>
         </div>
       </div>
@@ -61,10 +93,10 @@
         <h3>Venue Info</h3>
         <ul>
           <li>Venue: Evadale Raceway</li>
-          <li>Location: Evadale, TX</li>
+          <li>Location: Silsbee, TX</li>
           <li>Dates: Nov 13–14</li>
         </ul>
-        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Evadale%20Raceway%20Evadale%20TX" target="_blank" rel="noopener">Google Maps</a></div>
+        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Evadale%20Raceway%202364%20FM%20105%20Silsbee%20TX%2077656" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
     </div>
   </section>
