--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
               </div>
               <span class="pill">Apr 17-18</span>
             </div>
-            <a class="btn" href="#">Event Page</a>
+            <a class="btn" href="events/round-2.html">Event Page</a>
           </div>
         </div>
 
@@ -636,7 +636,7 @@
               </div>
               <span class="pill">Jun 4-6</span>
             </div>
-            <a class="btn" href="#">Event Page</a>
+            <a class="btn" href="events/round-3.html">Event Page</a>
           </div>
         </div>
 
@@ -666,7 +666,7 @@
               </div>
               <span class="pill">Sep 17-19</span>
             </div>
-            <a class="btn" href="#">Event Page</a>
+            <a class="btn" href="events/round-5.html">Event Page</a>
           </div>
         </div>
 
@@ -696,7 +696,7 @@
               </div>
               <span class="pill">Dec 5-6</span>
             </div>
-            <a class="btn" href="#">Event Page</a>
+            <a class="btn" href="events/round-7.html">Event Page</a>
           </div>
         </div>
       </div>
@@ -929,15 +929,15 @@
           <div>
             <h3>Clash Tee</h3>
             <div class="price">$29.99</div>
-            <div class="row"><a class="btn primary" href="#">Add to Cart</a><a class="btn" href="#">Details</a></div>
+            <div class="row"><a class="btn primary" href="https://nitrousoutlet.com/products/nitro-daves-clash-of-the-titans-race-series-shirt">Purchase</a></div>
           </div>
         </div>
         <div class="card product">
           <div class="img"></div>
           <div>
             <h3>Decals</h3>
-            <div class="price">$19.99</div>
-            <div class="row"><a class="btn primary" href="#">Add to Cart</a><a class="btn" href="#">Details</a></div>
+            <div class="price">Coming Soon!</div>
+            <div class="row"><a class="btn primary" aria-disabled="true" href="#">Add to Cart</a></div>
           </div>
         </div>
       </div>
@@ -950,19 +950,18 @@
       <div class="grid cols-3">
         <div>
           <h3>Contact</h3>
-          <p>Email: <a href="mailto:clash@nitrousoutlet.com">clash@nitrousoutlet.com</a><br>Media: <a href="mailto:media@nitrousoutlet.com">media@nitrousoutlet.com</a></p>
+          <p>Email: <a href="mailto:clash@nitrodaves.com">clash@nitrodaves.com</a><br>Media: <a href="mailto:media@nitrodaves.com">media@nitrodaves.com</a></p>
         </div>
         <div>
           <h3>Downloads</h3>
           <ul>
             <li><a href="assets/pdf/series-rules.pdf">Series Rules (PDF)</a></li>
-            <li><a href="assets/pdf/tech-card.pdf">Tech Card (PDF)</a></li>
-            <li><a href="assets/pdf/brand-assets.zip">Brand Assets (ZIP)</a></li>
+            <li><a href="assets/pdf/brand-assets.zip" aria-disabled="true">(Coming Soon)Brand Assets (ZIP)</a></li>
           </ul>
         </div>
         <div>
           <h3>Follow</h3>
-          <p><a href="#">YouTube</a> · <a href="#">Instagram</a> · <a href="#">Facebook</a></p>
+          <p><a href="https://www.instagram.com/official_cott/">Instagram</a> · <a href="https://www.facebook.com/profile.php?id=61573287809581">Facebook</a></p>
         </div>
       </div>
       <p class="copyright">© <span id="year"></span> Clash of the Titans • A Nitrous Outlet Series</p>
