--- a/events/round-2.html
+++ b/events/round-2.html
@@ -37,20 +37,35 @@
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
-          <div class="media-grid">
-            <a class="thumb" href="#">Video</a>
-            <a class="thumb" href="#">Photo</a>
-            <a class="thumb" href="#">Photo</a>
-            <a class="thumb" href="#">Photo</a>
-          </div>
+          <p><strong>Two Titans classes. One legendary battlefield.</strong></p>
+          <p>April 17th&ndash;18th at the Texas Motorplex in Ennis, TX, Nitro Dave&rsquo;s Clash of the Titans brings the 4.20&rsquo;ish and 4.50&rsquo;ish classes to Popeye Sailorman Productions&rsquo; N/T Street Car: <em>Rise of the Beast</em>.</p>
+
+          <p><strong>Thursday: 4/16/26</strong><br>Private Testing: $325 Per Car - 17 Car Minimum<br>Time: 6pm to 11:pm</p>
+          <p><strong>Friday: 4/17/26</strong><br>Tech &amp; Qualifying (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 4/18/26</strong><br>Eliminations (All Classes)<br>Time: TBD</p>
+
+          <p><strong>Classes:</strong></p>
+          <ul>
+            <li>Titans - 4.50' ish</li>
+            <li>Titans - 4.20' ish</li>
+          </ul>
         </div>
 
         <div class="card">
-          <h3>Results</h3>
-          <p class="muted">Results and media will be added after the event.</p>
-          <div class="row">
-            <a class="btn" href="../index.html#points">Points Standings</a>
-            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Map</a>
+          <h3>Map</h3>
+          <p class="muted">Texas Motorplex<br>316 Old Boyce Rd N, Ennis, TX 75119, United States</p>
+          <iframe
+            title="Google Map: Texas Motorplex, 316 Old Boyce Rd N, Ennis, TX 75119"
+            src="https://www.google.com/maps?q=Texas%20Motorplex%2C%20316%20Old%20Boyce%20Rd%20N%2C%20Ennis%2C%20TX%2075119%2C%20United%20States&output=embed"
+            width="100%"
+            height="340"
+            style="border:0;border-radius:12px"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
+          ></iframe>
+          <div class="row" style="margin-top:12px">
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%2C%20316%20Old%20Boyce%20Rd%20N%2C%20Ennis%2C%20TX%2075119%2C%20United%20States" target="_blank" rel="noopener">Open in Google Maps</a>
           </div>
         </div>
       </div>
@@ -62,7 +77,7 @@
           <li>Location: Ennis, TX</li>
           <li>Dates: Apr 17–18</li>
         </ul>
-        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Google Maps</a></div>
+        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20316%20Old%20Boyce%20Rd%20N%20Ennis%20TX%2075119" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
     </div>
   </section>
