--- a/events/round-4.html
+++ b/events/round-4.html
@@ -37,22 +37,55 @@
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
-          <p class="muted">Links will be posted after the event.</p>
-          <div class="media-grid">
-            <a class="thumb" href="#" aria-label="Watch highlight video">Video</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-          </div>
+          <p><strong>RACERS &mdash; WITNESS THE BIRTH OF A TITAN.</strong></p>
+          <p>July 17th &amp; 18th at the Texas Motorplex &ndash; Ennis, TX.</p>
+          <p>Nitro Dave&rsquo;s Clash of the Titans presents &ldquo;Birth Of A Titan.&rdquo;</p>
+          <p>Honoring 50 years of Nitro Dave and 25 years of Nitrous Outlet dominance.</p>
+          <p><strong>Legacy. Power. History.</strong></p>
+
+          <p>Experience a professional racing series built by an organization dedicated to bringing quality competition and family-friendly fun back to the South Central United States.</p>
+
+          <p><strong>Thursday: 7/16/26</strong><br>Private Testing: $325 Per Car - 17 Car Minimum<br>Time: 6pm to 11:pm</p>
+          <p><strong>Friday: 7/17/26</strong><br>Tech &amp; Qualifying (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 7/18/26</strong><br>Eliminations (All Classes)<br>Time: TBD</p>
+
+          <p><strong>Classes:</strong></p>
+          <ul>
+            <li>Lil' Titans - Jr Dragster 11.90 - 8.90</li>
+            <li>Rising Titans - Jr Dragster 7.90</li>
+            <li>Titans - 5.30' ish</li>
+            <li>Titans - 4.90' ish</li>
+            <li>Titans - 4.50' ish</li>
+            <li>Titans - 4.20' ish</li>
+            <li>Titans - 10.5</li>
+            <li>Titans - Outlaw 10.5</li>
+            <li>Titans - N/T 275 Drag Radial</li>
+            <li>Titans - N/T Outlaw 275 Drag Radial</li>
+            <li>Titans Rage - N/T 275 "Nitrous Brawl"</li>
+          </ul>
+
+          <p><strong>Activities:</strong></p>
+          <ul>
+            <li>Huffy's Bottle Throwing Contest</li>
+            <li>Elimination Tree Competition</li>
+          </ul>
         </div>
 
         <div class="card">
-          <h3>Results</h3>
-          <p class="muted">Results and media will be added after the event.</p>
-          <div class="row">
-            <a class="btn" href="../index.html#points">Points Standings</a>
-            <a class="btn" href="../index.html#media">Back to Past Races</a>
-            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Map</a>
+          <h3>Map</h3>
+          <p class="muted">Texas Motorplex<br>316 Old Boyce Rd N, Ennis, TX 75119, United States</p>
+          <iframe
+            title="Google Map: Texas Motorplex, 316 Old Boyce Rd N, Ennis, TX 75119"
+            src="https://www.google.com/maps?q=Texas%20Motorplex%2C%20316%20Old%20Boyce%20Rd%20N%2C%20Ennis%2C%20TX%2075119%2C%20United%20States&output=embed"
+            width="100%"
+            height="340"
+            style="border:0;border-radius:12px"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
+          ></iframe>
+          <div class="row" style="margin-top:12px">
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%2C%20316%20Old%20Boyce%20Rd%20N%2C%20Ennis%2C%20TX%2075119%2C%20United%20States" target="_blank" rel="noopener">Open in Google Maps</a>
           </div>
         </div>
       </div>
@@ -64,7 +97,7 @@
           <li>Location: Ennis, TX</li>
           <li>Dates: Jul 17–18</li>
         </ul>
-        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Google Maps</a></div>
+        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20316%20Old%20Boyce%20Rd%20N%20Ennis%20TX%2075119" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
     </div>
   </section>
