--- a/events/round-7.html
+++ b/events/round-7.html
@@ -37,22 +37,38 @@
       <div class="grid cols-2">
         <div class="card">
           <h3>Highlights</h3>
-          <p class="muted">Links will be posted after the event.</p>
-          <div class="media-grid">
-            <a class="thumb" href="#" aria-label="Watch highlight video">Video</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-            <a class="thumb" href="#">Photos</a>
-          </div>
+          <p>The season comes full circle.</p>
+          <p>Nitro Dave&rsquo;s Clash of the Titans storms the T&amp;E Streetcar Showdown at Texas Motorplex with the 4.50&rsquo;ish and 4.20&rsquo;ish classes.</p>
+          <p>When the racing ends Saturday night, the champions rise at the Clash of the Titans Year-End Championship Banquet.</p>
+          <p><strong>One last battle. One final crown. One legendary night.</strong></p>
+
+          <p><strong>Thursday: 12/3/26</strong><br>Private Testing: $325 Per Car - 17 Car Minimum<br>Time: 6pm to 11:pm</p>
+          <p><strong>Friday: 12/4/26</strong><br>Tech &amp; Qualifying (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 12/5/26</strong><br>Eliminations (All Classes)<br>Time: TBD</p>
+          <p><strong>Saturday: 12/5/26</strong><br>After Racing - Year End Championship Banquet</p>
+
+          <p><strong>Classes:</strong></p>
+          <ul>
+            <li>Titans - 4.50' ish</li>
+            <li>Titans - 4.20' ish</li>
+          </ul>
         </div>
 
         <div class="card">
-          <h3>Results</h3>
-          <p class="muted">Results and media will be added after the event.</p>
-          <div class="row">
-            <a class="btn" href="../index.html#points">Points Standings</a>
-            <a class="btn" href="../index.html#media">Back to Past Races</a>
-            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Map</a>
+          <h3>Map</h3>
+          <p class="muted">Texas Motorplex<br>316 Old Boyce Rd N, Ennis, TX 75119, United States</p>
+          <iframe
+            title="Google Map: Texas Motorplex, 316 Old Boyce Rd N, Ennis, TX 75119"
+            src="https://www.google.com/maps?q=Texas%20Motorplex%2C%20316%20Old%20Boyce%20Rd%20N%2C%20Ennis%2C%20TX%2075119%2C%20United%20States&output=embed"
+            width="100%"
+            height="340"
+            style="border:0;border-radius:12px"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen
+          ></iframe>
+          <div class="row" style="margin-top:12px">
+            <a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%2C%20316%20Old%20Boyce%20Rd%20N%2C%20Ennis%2C%20TX%2075119%2C%20United%20States" target="_blank" rel="noopener">Open in Google Maps</a>
           </div>
         </div>
       </div>
@@ -64,7 +80,7 @@
           <li>Location: Ennis, TX</li>
           <li>Dates: Dec 5–6</li>
         </ul>
-        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20Ennis%20TX" target="_blank" rel="noopener">Google Maps</a></div>
+        <div class="row"><a class="btn" href="https://www.google.com/maps/search/?api=1&query=Texas%20Motorplex%20316%20Old%20Boyce%20Rd%20N%20Ennis%20TX%2075119" target="_blank" rel="noopener">Google Maps</a></div>
       </div>
     </div>
   </section>
